# Shape-Transformation

./: .gitignore  README.md  tatus
ImplicitFunction/: CMakeLists.txt
ImplicitFunction/ImplicitFunction/: CMakeLists.txt  Camera.h  ConvexHull.hpp  ImplicitFunction.cpp  ImplicitFunction.h  Line.vert  LinearSystem.hpp  Shader.h  glad.c  main.cpp  setting.hpp
ImplicitFunction/ImplicitFunction/algorithm/: ConvexHull.hpp  ImageProcess.hpp  ImplicitFunction.hpp  LinearSystem.hpp  PointProcess.hpp
ImplicitFunction/ImplicitFunction/resources/: Point.frag
ImplicitFunction/ImplicitFunction/settings/: Camera.h
